--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,18 @@
     padding: 0;
 }
 
+button,
+input[type="submit"],
+input[type="reset"] {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+
 body {
     text-decoration: none;
     list-style: none;
@@ -74,4 +86,227 @@ body {
     .content {
         max-width: 111rem;
     }
+}
+
+.card__profile {
+    background-color: var(--dBlue);
+    border-radius: 1.5rem;
+    overflow: hidden;
+    width: 100%;
+}
+
+@media screen and (min-width: 500px) {
+    .card__profile {
+        grid-row: 1/3;
+        display: flex;
+        flex-flow: column nowrap;
+    }
+}
+
+.card__profile_details {
+    width: 100%;
+    padding: 3.1rem 2.9rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 2rem;
+    background-color: var(--blue);
+    border-radius: 0 0 1.5rem 1.5rem;
+}
+
+@media screen and (min-width: 500px) {
+    .card__profile_details {
+        padding: 3.4rem 2.9rem 8rem 2.9rem;
+        flex-flow: column nowrap;
+        align-items: start;
+        gap: 4.3rem;
+        flex: 1 0 auto;
+    }
+}
+
+.card__profile_details_img {
+    width: 6.4rem;
+    border: 0.3rem solid white;
+    border-radius: 50%;
+}
+
+@media screen and (min-width: 500px) {
+    .card__profile_details_img {
+        width: 7.8rem;
+    }
+}
+
+.card__profile_details_text {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 0.4rem;
+}
+
+@media screen and (min-width: 500px) {
+    .card__profile_details_text {
+        gap: 0.3rem;
+        max-width: 60%;
+    }
+}
+
+.card__profile_details_text p {
+    font-size: 1.5rem;
+    font-weight: var(--fw-light);
+    color: var(--paleBlue);
+}
+
+.card__profile_details_text h2 {
+    font-size: 3rem;
+    font-weight: var(--fw-light);
+    color: #fafafa;
+}
+
+@media screen and (min-width: 500px) {
+    .card__profile_details_text h2 {
+        line-height: 4rem;
+    }
+}
+
+.card__profile_buttons {
+    padding: 2.4rem 2rem 2.5rem 3.3rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+@media screen and (min-width: 500px) {
+    .card__profile_buttons {
+        flex-flow: column nowrap;
+        gap: 2.1rem;
+        padding: 2.6rem 3.2rem 3.2rem;
+    }
+}
+
+.card__profile_buttons button {
+    width: max-content;
+    font-size: 1.4rem;
+    color: var(--paleBlue);
+    transition: color 250ms;
+    cursor: pointer;
+}
+
+.card__profile_buttons button:is(:hover, .active) {
+    color: #fafafa;
+}
+
+.card {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 3.8rem 1fr;
+    grid-template-columns: 1fr;
+    overflow: hidden;
+    border-radius: 1.5rem;
+}
+
+@media screen and (min-width: 500px) {
+    .card {
+        grid-template-rows: 4.5rem 1fr;
+    }
+}
+
+.card:is(.work) {
+    --background: var(--lightred);
+}
+
+.card:is(.play) {
+    --background: var(--softblue);
+}
+
+.card:is(.study) {
+    --background: var(--lightred2);
+}
+
+.card:is(.exercise) {
+    --background: var(--limegreen);
+}
+
+.card:is(.social) {
+    --background: var(--violet);
+}
+
+.card:is(.selfcare) {
+    --background: var(--softorange);
+}
+
+.card__img {
+    grid-row: 1/3;
+    grid-column: 1/2;
+    display: grid;
+    place-items: start end;
+    background-color: var(--background);
+    height: 70%;
+}
+
+.card__img>img {
+    transform: translate(-2rem, 0rem);
+    position: relative;
+    z-index: 1;
+}
+
+#imgexercise {
+    transform: rotate(-45deg);
+}
+
+.card__timeframe {
+    position: relative;
+    z-index: 2;
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background: var(--dBlue);
+    transition: background 250ms, transform 250ms;
+    height: 100%;
+    padding: 2.8rem 2.4rem;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 0.6rem;
+    cursor: pointer;
+}
+
+.card:hover>.card__timeframe {
+    background: var(--desaturatedBlue);
+}
+
+@media screen and (min-width: 500px) {
+    .card__timeframe {
+        gap: 2.4rem;
+        padding: 2.9rem 3rem 3.2rem;
+    }
+}
+
+.header,
+.timeframes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+@media screen and (min-width: 500px) {
+    .timeframes {
+        flex-flow: column nowrap;
+        align-items: start;
+        gap: 0.8rem;
+    }
+}
+
+.header {
+    color: #fafafa;
+    font-weight: var(--fw-regular);
+}
+
+.header__menu {
+    transition: #fafafa 250ms;
+}
+
+.header__menu:hover>svg path {
+    fill: #fafafa;
 }
